--- a/0x00-html_advanced/6-index.html
+++ b/0x00-html_advanced/6-index.html
@@ -19,9 +19,9 @@
   <section>Hero section</section>
   <section>Services section</section>
   <section>Works section
-   <article>Article 1</article>
-   <article>Article 2</article>
-   <article>Article 3</article>
+   <article>Work 1</article>
+   <article>Work 2</article>
+   <article>Work 3</article>
   </section>
   <section>About section</section>
   <section>Latest news section</section>
