--- a/0x00-html_advanced/15-index.html
+++ b/0x00-html_advanced/15-index.html
@@ -15,8 +15,8 @@
  <header>
    <div>
    <span>Techium</span>
-  </div>
   <nav></nav>
+  </div>
  </header>
  <main>
      <h1>Homepage</h1>
@@ -26,6 +26,7 @@
       </div>
     </section>
   <section>
+    <div>
       <h2>Services</h2>
       <p>We work with you</p>
       <h3>Design & Concept</h3>
@@ -34,15 +35,19 @@
       <h3>UX Design</h3>
       <h3>Web Development</h3>
       <h3>Social Media</h3>
+      </div>
     </section>
   <section>
+    <div>
       <h2>Works</h2>
       <p>Take a look in our portfolio</p>
    <article><h3>Interior Design</h3></article>
    <article><h3>Web Development</h3></article>
    <article><h3>Personal Brand</h3></article>
+  </div>
   </section>
   <section>
+    <div>
       <h2>About Us</h2>
       <p>Everything about us</p>
       <h3>Who are we</h3>
@@ -51,8 +56,10 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
       <h3>How we work</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
+      </div>
     </section>
   <section>
+    <div>
       <h2>Latest news</h2>
       <article>
         <p>Career</p>
@@ -73,23 +80,30 @@
         Stoicis? Pugnant Stoici cum Peripateticis. Prioris generis est docilitas, memoria; Apparet statim, quae sint officia,
         quae actiones.</p>
       </article>
+      </div>
   </section>
   <section>
+    <div>
       <h2>Testimonials</h2>
       <p>We are more than a digital company</p>
       <article>Testimonial 1</article>
       <article>Testimonial 2</article>
       <article>Testimonial 3</article>
+      </div>
   </section>
   <section>
+    <div>
       <h2>Contact</h2>
       <p>We like to know new people</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili
       facit; Quae contraria sunt his, malane?</p>
+      </div>
     </section>
  </main>
  <footer>
+  <div>
   Footer
+  </div>
  </footer>
 </body>
 
