--- a/0x00-html_advanced/26-styleguide.html
+++ b/0x00-html_advanced/26-styleguide.html
@@ -26,8 +26,7 @@
     ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in
     adipiscing blandit tempus accumsan.</p>
    </section>
-   <br>
-   <!--Lists-->
+   <br><!--Lists-->
    <section>
     <header>
      <h2>Lists</h2>
