--- a/0x07-accessibility/fix-a11y/05-index.html
+++ b/0x07-accessibility/fix-a11y/05-index.html
@@ -169,7 +169,7 @@
       <form action="#" method="post">
        <div class="input-group">
          <label for="email" class="visually-hidden"></label>
-        <input class="form-control" type="email" name="email" autocomplete="email" required aria-required="true" id="email">
+        <input id="email" autocomplete="email" required aria-required="true" class="form-control" type="email" name="email">
         <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
        </div>
       </form>
