Form elements must have labels

--- a/0x07-accessibility/fix-a11y/05-index.html
+++ b/0x07-accessibility/fix-a11y/05-index.html
@@ -170,7 +170,7 @@
        <div class="input-group">
          <label for="email" class="visually-hidden"></label>
         <input id="email" autocomplete="email" required aria-required="true" class="form-control" type="email" name="email">
-        <div class="input-group-btn"><a class="btn" type="submit">Validate</a></div>
+        <div class="input-group-btn"><button class="btn" type="submit">Validate</button></div>
        </div>
       </form>
      </div>
